start cutting away at old SettingsManager methods